--- a/nx.json
+++ b/nx.json
@@ -7,5 +7,15 @@
     "tslint.json": "*",
     "nx.json": "*"
   },
-  "projects": {}
+  "projects": {
+    "todos": {
+      "tags": []
+    },
+    "todos-e2e": {
+      "tags": []
+    },
+    "ui": {
+      "tags": []
+    }
+  }
 }
